# mm3d-practice-tools

./: .gitignore  Makefile  USAGE.md  make_release.sh  readme.md
hooks/: main.hks  rst_isg.hks
source/: CMakeLists.txt
source/common/: hidstate.cpp  hidstate.h  svc.s
source/game/: actor.h  common_data.h  context.cpp  context.h  items.cpp  items.h  memory.cpp  memory.h  pad.h  player.cpp  player.h
source/msys/: MyThread.cpp  cheats.cpp  commands.cpp  debug.cpp  draw.cpp  entrances.cpp  equips.cpp  file_functions.cpp  fs.cpp  inventory.cpp  menu.cpp  menus.cpp  save.cpp  svc_loader.s  svc_menus.s  synchronization.cpp  warps.cpp  watches.cpp
source/msys/3ds/: MyThread.cpp  apt.cpp  draw.cpp  fs.cpp  gspgpu.cpp  srv.cpp  svc_loader.s  synchronization.cpp
source/msys/3ds/allocator/: mappable.cpp
source/msys/3ds/applets/: swkbd.cpp
source/msys/3ds/services/: ptmsysm.cpp
source/msys/3ds/util/utf/: decode_utf16.cpp  decode_utf8.cpp  encode_utf16.cpp  encode_utf8.cpp  utf16_to_utf8.cpp  utf8_to_utf16.cpp
source/msys/include/: MyThread.h  csvc.h  draw.h  entrances.h  file_functions.h  fmt.h  internal.h  menu.h  menus.h  utils.h
source/msys/include/3ds/: env.h  errf.h  font.h  gfx.h  ipc.h  os.h  result.h  srv.h  svc.h  synchronization.h  thread.h  types.h
source/msys/include/3ds/allocator/: mappable.h
source/msys/include/3ds/applets/: swkbd.h
source/msys/include/3ds/services/: apt.h  fs.h  gspgpu.h  ptmsysm.h  srvpm.h
source/msys/include/3ds/sys/: lock.h
source/msys/include/3ds/util/: utf.h
source/msys/include/fonts/: ascii_font.h
source/msys/include/lib/: string.h
source/msys/include/menus/: cheats.h  commands.h  debug.h  equips.h  file.h  inventory.h  save.h  scene.h  warps.h  watches.h
source/rst/: main.cpp
